--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "^18.2.0",
     "react-native": "^0.73.6",
+    "react-native-elements": "^3.4.3",
     "react-native-pager-view": "^6.3.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
