--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "expo": "^51.0.14",
     "expo-av": "^14.0.5",
     "expo-file-system": "^17.0.1",
@@ -23,6 +24,7 @@
     "react-native": "^0.73.6",
     "react-native-elements": "^3.4.3",
     "react-native-pager-view": "^6.3.1",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-tab-view": "^3.5.2",
