--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
