--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -17,25 +17,27 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "expo": "^51.0.14",
-    "expo-av": "^14.0.5",
-    "expo-file-system": "^17.0.1",
-    "expo-status-bar": "~1.11.1",
-    "react": "^18.2.0",
-    "react-native": "^0.73.6",
+    "expo-av": "~14.0.5",
+    "expo-cli": "^6.3.10",
+    "expo-file-system": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.2",
     "react-native-elements": "^3.4.3",
-    "react-native-pager-view": "^6.3.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-updates": "~0.25.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
